<resources>
    <string name="app_name">HARA</string>
    <string name="hara">해라</string>
    <string name="together_hara">함께해라</string>
    <string name="storage">보관함</string>
    <string name="worring">고민중</string>
    <string name="delete">삭제</string>
    <string name="nickname">닉네임</string>
    <string name="dummy_date">2022.12.25</string>
    <string name="comment">댓글</string>
    <string name="percentage">%d</string>
    <string name="comment_count">댓글 %d</string>
    <string name="anonymity">익명</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="category">카테고리</string>
    <string name="server_connet_fail">서버연결에 실패하였습니다.</string>
    <string name="detail_comment_hint">댓글 내용을 입력해주세요</string>
    <string name="dialog_delete">고민글을 삭제하시겠습니까?</string>
    <string name="dialog_delete_warn">작성하신 글을 삭제하습니까?</string>
    <string name="one_sec_solve">1초만에 해결하기</string>
    <string name="one_sec_solve_game">1초만에 고민 해결 하러 가기</string>
    <string name="one_sec_hint">고민의 제목을 입력해주세요.</string>
    <string name="one_sec_last">지난 나의 고민</string>
    <string name="one_sec_notice">최근 10개의 고민까지만 저장되고 오래된 순으로 자동 삭제돼요!</string>
    <string name="one_sec_pick">해결 카드 뽑기</string>
    <string name="one_sec_retry">다시뽑기</string>
    <string name="write_option_hint">선택지를 입력해주세요 (20자 이내)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  home  -->
    <string name="vote">투표하기</string>
    <string-array name="category_array">
        <item>전체</item>
        <item>일상</item>
        <item>연애</item>
        <item>패션/뷰티</item>
        <item>커리어</item>
        <item>운동</item>
        <item>여행</item>
        <item>기타</item>
    </string-array>

    <string name="storage_filter_ing">고민중</string>
    <string name="storage_filter_com">고민 완료</string>

    <!--  write  -->
    <string name="write_appbar">고민 작성하기</string>
    <string name="write_title_question">무엇에 대해\n고민중인가요?</string>
    <string name="write_title_answer_hint">고민을 한줄로 요약해주세요</string>
    <string name="write_content_answer_hint">고민을 더 자세히 적어주세요</string>
    <string name="write_option_question">고민되는 선택지를\n적어주세요.</string>
    <string name="write_option_answer_hint">제목을 입력해주세요.</string>
    <string name="write_proscons_question">선택지의\n장단점을 적어보세요!</string>
    <string name="write_proscons_explanation">장단점은 스킵 할 수 있어요.</string>
    <string name="write_pros">장점</string>
    <string name="write_cons">단점</string>
    <string name="write_pros_answer_hint">해당 선택지의 장점을 적어보세요</string>
    <string name="write_cons_answer_hint">해당 선택지의 단점을 적어보세요</string>
    <string name="write_category_question">고민의 카테고리를\n정해주세요.</string>
    <string name="write_category_answer_hint">카테고리를 선택해주세요.</string>
    <string name="write_how_question">그렇다면 이 고민 어떻게\n해결해볼까요?</string>
    <string name="write_how_alone">혼자 고민할래요</string>
    <string name="write_how_alone_explanation">투표창 없이\n혼자 선택할 수 있어요</string>
    <string name="write_how_with">함께 고민할래요</string>
    <string name="write_how_with_explanation">투표로 다른 사람들의\n의견도 들어볼 수 있어요</string>
    <string name="write_comment_option">댓글 켜기</string>
    <string name="write_upload_button">업로드하기</string>
    <string name="write_title_length">%d/25</string>
    <string name="write_content_length">%d/300</string>

    <!--  dialog  -->
    <string name="dialog_cancel">취소</string>
    <string name="dialog_upload">업로드</string>
    <string name="dialog_upload_title">고민글을 게시하겠습까?</string>
    <string name="dialog_upload_warn">게시된 고민글은 수정이 불가능해요.</string>
    <string name="dialog_category">카테고리</string>
    <string name="dialog_finish">완료</string>

    <string name="search_input">검색어 입력</string>
    <string name="search">검색</string>
    <string name="search_hint">어떤 고민을 찾으시나요?</string>
    <string name="search_type">검색어 입력</string>
    <string name="search_empty">찾으시는 고민이 없어요</string>
    <string name="search_count">%d개의 고민글</string>

    <string name="editing">수정하기</string>
    <string name="deleting">삭제하기</string>
</resources>