<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background=""
            android:text="@string/cancel"
            android:textAppearance="@style/hara_body1_sb14"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_bottom" />

        <TextView
            android:id="@+id/tv_title_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:textAppearance="@style/hara_game_sb18"
            android:textColor="@color/blue_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background=""
            android:text="@string/complete"
            android:textAppearance="@style/hara_body1_sb14"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_bottom" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>