<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.android.hara.presentation.write.fragment.how.HowFragViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/tv_write_content_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:textAppearance="@style/hara_modal1_m24"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title_bold="@{@string/write_how_question}"
            app:title_bold_end="@{13}"
            app:title_bold_start="@{10}"
            tools:text="@string/write_how_question" />

        <!--    button    -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_category_worry_alone_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="8dp"
            android:background="@{vm.isAloneSelected ? @drawable/shape_rectangle_blue1_stroke_1_8 : @drawable/shape_rectangle_gray4_stroke_1_8}"
            app:layout_constraintEnd_toStartOf="@+id/cl_category_worry_with_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_write_content_question">

            <TextView
                android:id="@+id/tv_write_how_alone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/write_how_alone"
                android:textAppearance="@style/hara_heading2_m16"
                android:textColor="@{vm.isAloneSelected ? @color/blue_1 : @color/gray_4}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/write_how_alone_explanation"
                android:textAppearance="@style/hara_sub3_r12"
                android:textColor="@{vm.isAloneSelected ? @color/blue_1 : @color/gray_4}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_write_how_alone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_category_worry_with_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="12dp"
            android:background="@{vm.isWithSelected ? @drawable/shape_rectangle_blue1_stroke_1_8 : @drawable/shape_rectangle_gray4_stroke_1_8}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cl_category_worry_alone_button"
            app:layout_constraintTop_toBottomOf="@+id/tv_write_content_question">

            <TextView
                android:id="@+id/tv_write_how_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/write_how_with"
                android:textAppearance="@style/hara_heading2_m16"
                android:textColor="@{vm.isWithSelected ? @color/blue_1 : @color/gray_4}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/write_how_with_explanation"
                android:textAppearance="@style/hara_sub3_r12"
                android:textColor="@{vm.isWithSelected ? @color/blue_1 : @color/gray_4}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_write_how_with" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--    bottom    -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_write_content_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:stateListAnimator="@null"
            android:background="@{vm.enabled ? @drawable/shape_rectangle_blue1_fill_1000 : @drawable/shape_rectangle_white_blue3_stroke_1_1000}"
            android:paddingHorizontal="70dp"
            android:paddingVertical="14dp"
            android:text="@string/write_upload_button"
            android:textAppearance="@style/hara_heading1_sb16"
            android:textColor="@{vm.enabled ? @color/gray_5 : @color/blue_3}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ib_write_content_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_on"
            app:layout_constraintBottom_toBottomOf="@+id/btn_write_content_upload_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_write_content_upload_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>