<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tv_write_title_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="86dp"
        android:text="@string/write_title_question"
        android:textAppearance="@style/hara_modal1_m24"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_write_title_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="96dp"
        android:background="@null"
        android:hint="@string/write_title_answer_hint"
        android:textColor="@color/gray_3"
        android:inputType="text"
        android:maxLength="25"
        android:textAppearance="@style/hara_modal2_m18"
        app:layout_constraintEnd_toStartOf="@+id/iv_write_pencil_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_write_title_question" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="11dp"
        android:background="@color/blue_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_write_title_answer" />

    <ImageView
        android:id="@+id/iv_write_pencil_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_pencil"
        app:layout_constraintBottom_toBottomOf="@+id/et_write_title_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_write_title_answer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ib_write_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:background="@drawable/shape_rectangle_blue3_stroke_1_1000"
        android:paddingHorizontal="70dp"
        android:paddingVertical="14dp"
        android:text="@string/write_upload_button"
        android:textAppearance="@style/hara_heading1_sb16"
        android:textColor="@color/blue_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_write_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_next_off"
        app:layout_constraintBottom_toBottomOf="@+id/ib_write_upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ib_write_upload_button" />

</androidx.constraintlayout.widget.ConstraintLayout>