<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.android.hara.presentation.write.fragment.what.WhatFragViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <TextView
            android:id="@+id/tv_write_what_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="70dp"
            android:text="@string/write_title_question"
            android:textAppearance="@style/hara_modal1_m24"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_write_what_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="33dp"
            android:background="@null"
            android:hint="@string/write_title_answer_hint"
            android:inputType="text"
            android:maxLength="20"
            android:text="@={vm.title}"
            android:textAppearance="@style/hara_modal2_m18"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_3"
            app:layout_constraintEnd_toStartOf="@+id/iv_write_pencil_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_write_what_question" />

        <View
            android:id="@+id/view_title_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="11dp"
            android:background="@color/blue_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_write_what_answer" />

        <TextView
            android:id="@+id/what_title_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="0/20"
            android:textAppearance="@style/hara_body3_r14"
            android:textColor="@color/gray_3"
            app:layout_constraintEnd_toEndOf="@+id/view_title_divider"
            app:layout_constraintTop_toBottomOf="@+id/view_title_divider" />

        <ImageView
            android:id="@+id/iv_write_pencil_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_pencil"
            app:layout_constraintBottom_toBottomOf="@+id/et_write_what_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_write_what_answer" />

        <!--    content 추가    -->
        <EditText
            android:id="@+id/et_write_content_answer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="79dp"
            android:background="@drawable/shape_rectangle_blue3_stroke_1_12"
            android:gravity="top"
            android:hint="@string/write_content_answer_hint"
            android:maxLength="300"
            android:paddingHorizontal="12dp"
            android:paddingVertical="14dp"
            android:text="@={vm.content}"
            android:textAppearance="@style/hara_heading2_m16"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_3"
            app:layout_constraintBottom_toTopOf="@+id/ib_write_upload_button"
            app:layout_constraintTop_toBottomOf="@+id/view_title_divider" />

        <TextView
            android:id="@+id/what_content_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:text="0/300"
            android:textAppearance="@style/hara_body3_r14"
            android:textColor="@color/gray_3"
            app:layout_constraintBottom_toBottomOf="@+id/et_write_content_answer"
            app:layout_constraintEnd_toEndOf="@+id/et_write_content_answer" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ib_write_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/shape_rectangle_blue3_stroke_1_1000"
            android:paddingHorizontal="70dp"
            android:paddingVertical="14dp"
            android:text="@string/write_upload_button"
            android:textAppearance="@style/hara_heading1_sb16"
            android:textColor="@color/blue_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ib_write_next_button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_off"
            app:layout_constraintBottom_toBottomOf="@+id/ib_write_upload_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_write_upload_button" />

        <ImageButton
            android:id="@+id/ib_write_next_button_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_on"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/ib_write_upload_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ib_write_upload_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>